tests/NormalTests/paczka1/fuzzy1/42823124.err
Error in line 4: S577 S140 14,60
Error in line 11: H2dM4b A896 11,4
Error in line 14: ivzZBxZm S140 84,42
Error in line 18: YfAcl7C S140 85,5
